--- a/octopi.yml
+++ b/octopi.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: flowers
+- hosts: octopi
   remote_user: pi
   connection: paramiko # because we need to specify a password on the first run
   vars:
     ansible_ssh_pass: raspberry # hopefully just for the first run
-    hostname: rpi-flowers
+    hostname: octopi
     domain: home.silfreed.net
   roles:
     - rpi-common
