moving influxdb to its own host

--- a/roles/mkthordocker/vars/influxdb.yml
+++ b/roles/mkthordocker/vars/influxdb.yml
@@ -21,5 +21,7 @@ docker_vols:
   "/mnt/influxdb/influxdb2": "/var/lib/influxdb2"
   "/mnt/influxdb/influxdb2-config": "/etc/influxdb2"
 docker_options: |
+  --network=lan5 \
+  --ip=192.168.0.200 \
   --user=454:451 \
   --ulimit nofile=50000:50000 \
