--- a/roles/mkthordocker/vars/unifi-poller.yml
+++ b/roles/mkthordocker/vars/unifi-poller.yml
@@ -6,6 +6,6 @@ docker_env:
   UP_UNIFI_DEFAULT_URL: "https://192.168.1.1"
   UP_UNIFI_DEFAULT_USER: "unifipoller"
   UP_UNIFI_DEFAULT_PASS: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section='THOR', field='unifi read pass') }}"
-  UP_INFLUXDB_URL: "http://192.168.0.15:8086"
+  UP_INFLUXDB_URL: "http://influxdb:8086"
   UP_INFLUXDB_USER: "unifi"
   UP_INFLUXDB_PASS: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section='THOR', field='influxdb unifi pass') }}"
