--- a/roles/mkthordocker/vars/loki.yml
+++ b/roles/mkthordocker/vars/loki.yml
@@ -18,4 +18,6 @@ docker_vols:
   "/etc/group": "/etc/group"
   "/mnt/loki": "/loki"
 docker_options: |
+  --network=lan5 \
+  --ip=192.168.0.201 \
   --user=451:447 \
