--- a/roles/mkthordocker/vars/promtail-journald.yml
+++ b/roles/mkthordocker/vars/promtail-journald.yml
@@ -3,7 +3,7 @@ name: promtail
 docker_hub_image: grafana/promtail:latest
 description: "Promtail journald local forwarder"
 docker_vols:
-  "/etc/promtail": "/etc/promtail"
+  "/etc/promtail/config.yml": "/etc/promtail/config.yml"
   "/var/log/journal": "/var/log/journal"
   "/run/log/journal": "/run/log/journal"
   "/etc/machine-id": "/etc/machine-id"
