--- a/thor.yml
+++ b/thor.yml
@@ -59,3 +59,31 @@
     ansible.builtin.include_role:
       name: mkthordocker
       vars_from: promtail-journald
+
+  - name: "syslog-ng to promtail shipping"
+    become: true
+    template:
+      src: syslog-ng_syslog-to-loki.conf.j2
+      dest: "/etc/promtail/syslogng-loki.conf"
+      mode: "0644"
+      owner: root
+      group: root
+
+  - name: "syslog-ng to promtail"
+    ansible.builtin.include_role:
+      name: mkthordocker
+      vars_from: syslog-ng_syslog-to-loki
+
+  - name: "Promtail syslog shipping"
+    become: true
+    template:
+      src: promtail-syslog_config.yml.j2
+      dest: "/etc/promtail/syslog-config.yml"
+      mode: "0644"
+      owner: root
+      group: root
+
+  - name: "Promtail syslog log shipping"
+    ansible.builtin.include_role:
+      name: mkthordocker
+      vars_from: promtail-syslog
