updating onepassword lookup for the v2 plugin

--- a/roles/btmon/defaults/main.yml
+++ b/roles/btmon/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-mysql_host: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_host') }}"
-mysql_user: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_user') }}"
-mysql_pass: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_pass') }}"
-oem_token: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='oem_token') }}"
+mysql_host: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_host') }}"
+mysql_user: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_user') }}"
+mysql_pass: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='mysql_pass') }}"
+oem_token: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='oem_token') }}"
