--- a/roles/mkthordocker/defaults/main.yml
+++ b/roles/mkthordocker/defaults/main.yml
@@ -20,7 +20,7 @@
 #   GUID: 451
 #   INFLUXDB_HTTP_AUTH_ENABLED: true
 #   INFLUXDB_ADMIN_USER: admin
-#   INFLUXDB_ADMIN_PASSWORD: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section='THOR', field='influxdb admin pass') }}"
+#   INFLUXDB_ADMIN_PASSWORD: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section='thor', field='influxdb admin pass') }}"
 # docker_ports:
 #   8086: 8086
 #docker_vols:
