--- a/roles/mkthordocker/vars/influxdb.yml
+++ b/roles/mkthordocker/vars/influxdb.yml
@@ -12,7 +12,7 @@ docker_env:
   GUID: 451
   INFLUXDB_HTTP_AUTH_ENABLED: true
   INFLUXDB_ADMIN_USER: admin
-  INFLUXDB_ADMIN_PASSWORD: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section='THOR', field='influxdb admin pass') }}"
+  INFLUXDB_ADMIN_PASSWORD: "{{ lookup('community.general.onepassword', 'HKRoad Ansible Passwords', section='thor', field='influxdb admin pass') }}"
 docker_ports:
   8086: 8086
 docker_vols:
