Fixing path to influx repo and key

--- a/roles/telegraf/tasks/redhat.yml
+++ b/roles/telegraf/tasks/redhat.yml
@@ -4,9 +4,8 @@
   yum_repository:
     name: influxdb
     description: InfluxDB Repository
-    #baseurl: https://repos.influxdata.com/rhel/$releasever/$basearch/stable/
-    baseurl: https://repos.influxdata.com/rhel/8/$basearch/stable/
-    gpgkey: https://repos.influxdata.com/influxdb.key
+    baseurl: https://repos.influxdata.com/stable/$basearch/main/
+    gpgkey: https://repos.influxdata.com/influxdata-archive.key
     gpgcheck: yes
 
 - name: install telegraf via dnf
