--- a/site.yml
+++ b/site.yml
@@ -3,5 +3,6 @@
 - import_playbook: btmon.yml
 - import_playbook: flowers.yml
 - import_playbook: rtlsdr.yml
-- import_playbook: octopi.yml
+- import_playbook: octoprint.yml
 - import_playbook: thor.yml
+- import_playbook: ceph.yml
