change from dnf to package install vim-enhanced if redhat or vim if not (debian)

--- a/roles/hkrd/tasks/main.yml
+++ b/roles/hkrd/tasks/main.yml
@@ -2,9 +2,9 @@
 - name: hkrd base packages
   tags: hkrd
   become: true
-  dnf:
+  ansible.builtin.package:
     state: latest
     pkg:
-      - vim-enhanced
+      - "{{ ( ansible_facts['distribution'] == 'redhat' ) | ternary ('vim-enhanced', 'vim') }}"
       - htop
       - dstat
