--- a/roles/mkthordocker/vars/loki.yml
+++ b/roles/mkthordocker/vars/loki.yml
@@ -17,6 +17,7 @@ docker_vols:
   "/etc/passwd": "/etc/passwd"
   "/etc/group": "/etc/group"
   "/mnt/loki": "/loki"
+  "/mnt/loki/loki.yaml": "/etc/loki/local-config.yaml"
 docker_options: |
   --network=lan5 \
   --ip=192.168.0.201 \
