--- a/thor.yml
+++ b/thor.yml
@@ -3,6 +3,7 @@
   remote_user: silfreed
 
   roles:
+    - hkrd
     - telegraf
 
   tasks:
@@ -77,9 +78,4 @@
     ansible.builtin.include_role:
       name: mkthordocker
       vars_from: promtail-syslog
-
-  - name: "Satisfactory Game Server"
-    ansible.builtin.include_role:
-      name: mkthordocker
-      vars_from: satisfactory
 
