--- a/roles/mkthordocker/vars/grafana.yml
+++ b/roles/mkthordocker/vars/grafana.yml
@@ -26,7 +26,7 @@ docker_vols:
   "/mnt/grafana_data/var-lib-grafana": "/var/lib/grafana"
   # "/mnt/grafana_data/etc-grafana": "/etc/grafana"
   # "/mnt/grafana_data/usr-share-grafana": "/usr/share/grafana" 
-docker_options: |
-  --network=lan5 \
-  --ip=192.168.0.199 \
-  --user=455:452 \
+docker_options:
+  - --network=lan5
+  - --ip=192.168.0.199
+  - --user=455:452
